@@ -42,6 +42,8 @@ VERSION 2.2.2
     * Improved guessing tags from filename. Added preview to Dialog.
 
   BUGFIXES:
+    * Fixed inline playlist editor saving values that had been edited but
+      where the value had not actually changed.
     * Pressing enter now correctly applies changes in the playlist inline
       editor. (BR 215924)
     * The volume slider in the Slim Toolbar would sometimes work incorrectly
